--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -2,7 +2,7 @@
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630991.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/12/472753-320x200.jpg"><p align="center">反制中共侵犯人权 蓬佩奥：制裁59中国实体</p></a>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630991.md#1" title="反制中共侵犯人权 蓬佩奥：制裁59中国实体""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/472753-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630544.md#1" title="【直播】多米尼证人指控其CEO作证时撒谎""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/Dominion-1-1200x768-600x400-1-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629751.md#1" title="【大选更新12·18】川普：对最高法院非常失望""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1198673347-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629751.md#1" title="【大选更新12·18】伊万卡将赴乔州助选""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1282573976-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630805.md#1" title="【一线采访】成都遮掩疫情 百姓批无知情权""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/IMG_5206-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630739.md#1" title="替中共监视视频会议 Zoom中国雇员被诉""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/Screen-Shot-2020-12-18-at-22.50.29-320x200.png">&nbsp;</a>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630731.md#1" title="川普吁麦康奈尔和GOP参议员须强硬反窃选""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/03/000_1PR7WX-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628408.md#1" title="美核安全局网络遭APT黑客入侵 影响6机构""><img width="73" src="https://i.epochtimes.com/assets/uploads/2008/12/812101600362037-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629029.md#1" title="当选参议员有意挑战选举人团 川普回应""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1229555811-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vsrhmu3414.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630664.md#1">挺过2020年 台湾演艺圈十大话题</a><br>
-:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630745.md#1">专家指美国处十字路口 川普需力挽狂澜</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631046.md#1">伊万卡将赴乔州为两共和党参议员助选</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630967.md#1">参议员霍利：美国国会需对选举诚信进行监管</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630991.md#1">反制中共侵犯人权 蓬佩奥：制裁59中国实体</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630970.md#1">川普：我和我们国家对最高法院非常失望</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630664.md#1">挺过2020年 台湾演艺圈十大话题</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630745.md#1">专家指美国处十字路口 川普需力挽狂澜</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631046.md#1">伊万卡将赴乔州为两共和党参议员助选</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630967.md#1">参议员霍利：美国国会需对选举诚信进行监管</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630991.md#1">反制中共侵犯人权 蓬佩奥：制裁59中国实体</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630970.md#1">川普：我和我们国家对最高法院非常失望</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629245.md#1">【翻墙必看】首席大法官罗伯茨被曝丑闻</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 369,579,591 人
+!共 369,579,111 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
