--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -2,9 +2,9 @@
 <tr><td><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/14/n12620899.md#1" target="_blank"> 下班后按摩脚底5部位 缓解过劳、疲劳</a><br></h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/14/n12620899.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/foot-massage-fatigue0-1212-health11-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/6/n12599786.md#1" target="_blank"> 大雪节气养生早睡晚起 3招保养心血管、增免疫</a><br></h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/6/n12599786.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/Daxue-solar-term-chinese-medicine-0-tj-health11-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/3/n12594410.md#1" target="_blank"> 忧郁症有4大症状 怎样改善？治疗和饮食全图解</a><br></h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/3/n12594410.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/Depression-symptoms-and-treatment-001-tj-health11-320x200.jpg"></a></td></tr>
+<tr><td><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631000.md#1" target="_blank"> 喘不一定是老化、心脏病！这种喘当心肺纤维化</a><br></h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631000.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/shutterstock_1730129644-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/2/n12591537.md#1" target="_blank"> 高血压有4种类型 中医可治好 1茶饮天然降压</a><br></h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/2/n12591537.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/hypertension-chinese-medicine2-1212-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/10/n12611410.md#1" target="_blank"> 这个冬天不想感冒？神奇2穴位迅速击退感冒</a><br></h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/10/n12611410.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/cold-chinese-medicine-0-1210-hnw-health11-320x200.jpg"></a></td></tr>
-<tr><td><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/9/n12608346.md#1" target="_blank"> 鸡汤怎么煮最滋补？3道鸡汤药膳 补肾去湿气</a><br></h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/9/n12608346.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/chicken-soup-chinese-medicine0-1209-health11-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628034.md#1" target="_blank">破解宝宝睡眠常见6误区 让他睡得久有秘诀</a><br></h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628034.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/shutterstock_1657674853-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/3/n12594093.md#1" target="_blank">一天20步就能瘦！日医师这样走路 告别肥胖酸痛</a><br></h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/3/n12594093.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/cross-walk-lose-weight0-1208-health11-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/9/15/n12405683.md#1" target="_blank">重训选哪种？五大重点一篇看懂</a><br></h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/9/15/n12405683.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/weight-training_138319607-320x200.jpg"></a></td></tr>
@@ -19,11 +19,11 @@
 <h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/13/2/9/n3797754.md#1" target="_blank">这种飞蚊症不用怕！2招改善 赶走恼人飞蚊</a><br></h3>
 <h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/12/n12615809.md#1" target="_blank">练肌肉选在中午还是晚上？正确时间运动助入眠</a><br></h3>
 <h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/15/n12622560.md#1" target="_blank">家里常备10种中药 抗发炎、护肠胃好处说不完</a><br></h3>
-<h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/15/n12622701.md#1" target="_blank">头晕是体内水分滞留？2类食物改善头晕晕眩</a><br></h3>
 <h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/16/n12625297.md#1" target="_blank">新冠病毒隔离期间 绝对不能做的七件事</a><br></h3>
 <h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/16/n12625775.md#1" target="_blank">【慧聊养生】金字塔隐藏的打坐秘奥</a><br></h3>
 <h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628034.md#1" target="_blank">破解宝宝睡眠常见6误区 让他睡得久有秘诀</a><br></h3>
-<h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628167.md#1" target="_blank">苦味护心解毒、酸味防漏尿！一篇看懂五味功效</a><br></h3>
+<h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628167.md#1" target="_blank">苦味护心、酸味改善自律神经 一篇看懂五味功效</a><br></h3>
+<h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631000.md#1" target="_blank">喘不一定是老化、心脏病！这种喘当心肺纤维化</a><br></h3>
 <h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/2/n12591537.md#1" target="_blank">高血压有4种类型 中医可治好 1茶饮天然降压</a><br></h3>
 <h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/7/n12600078.md#1" target="_blank">厕所异味有原因！3个清洁妙方除臭又去污垢</a><br></h3>
 <tr><td><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
