--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,18 +13,18 @@
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629629.md#1" title="选举人团对决 在国会联席会议能翻盘吗？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/A4-4-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628408.md#1" title="美核安全局网络遭APT黑客入侵 影响6机构""><img width="73" src="https://i.epochtimes.com/assets/uploads/2008/12/812101600362037-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vsrhmu3414.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631030.md#1">【新闻看点】民主党背水战 国防部暂停拜登过渡</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631244.md#1">【珍言真语】曾铮：美制度根基遭中共腐化</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631167.md#1">川普：准备分发Moderna疫苗 再向欧洲提供</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631228.md#1">【横河直播】司法立法途穷 川普如何破阵？</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631149.md#1">传亨特曾问会计：我进监狱后收入是多少？</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630942.md#1">纳瓦罗：民主党2020窃选策略——“千伤致命”</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631308.md#1">川普团队顾问：预计在宾州采取更多法律行动</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631356.md#1">【翻墙必看】李克强经济工作会议透漏实情</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631030.md#1">【新闻看点】民主党背水战 国防部暂停拜登过渡</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631244.md#1">【珍言真语】曾铮：美制度根基遭中共腐化</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631167.md#1">川普：准备分发Moderna疫苗 再向欧洲提供</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631228.md#1">【横河直播】司法立法途穷 川普如何破阵？</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629245.md#1">【翻墙必看】首席大法官罗伯茨被曝丑闻</a><br>
+<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630478.md#1">代理防长暂停与拜登团队过渡？国防部回应</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628632.md#1">中共称接回7万人 网友打脸：天价机票回国难</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12626544.md#1">【翻墙必看】大陆多省市强制限电停工</a><br>
-<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630478.md#1">代理防长暂停与拜登团队过渡？国防部回应</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12626403.md#1">大陆宣布明年将进口至少1亿支德国疫苗</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12626970.md#1">北大学者：大陆失业人口已达一亿</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12626630.md#1">马云任校长的湖畔大学 其云南分校招标被终止</a><br>
@@ -42,22 +42,22 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 369,585,131 人
+!共 369,585,762 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629751.md#1">【大选更新12·18】川普：对最高法院非常失望</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630222.md#1">美商务部将中芯国际等数十中企列入黑名单</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630739.md#1">替中共监视视频会议 Zoom中国雇员被诉</a><br>
+<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631057.md#1">钟原：李克强谈2021年经济工作透实情</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630984.md#1">中国被曝年前给五千万人打疫苗 疫苗合格吗？</a><br>
-<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631228.md#1">【横河直播】司法立法途穷 川普如何破阵？</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630805.md#1">【一线采访】成都遮掩疫情 百姓批无知情权</a><br>
-<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630729.md#1">杨威：习近平授军衔为何没有笑容？</a><br>
+<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631228.md#1">【横河直播】司法立法途穷 川普如何破阵？</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/5/n12598306.md#1">【特稿】拨乱反正 宪法赋予总统特别权力</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628549.md#1">【新闻看点】国会阻击战胜算？川普最后抉择</a><br>
-<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631057.md#1">钟原：李克强谈2021年经济工作透实情</a><br>
+<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631356.md#1">【翻墙必看】李克强经济工作会议透漏实情</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631149.md#1">传亨特曾问会计：我进监狱后收入是多少？</a><br>
-<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629232.md#1">白宫网站请愿：请总统下令戒严拯救国家</a><br>
+<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630729.md#1">杨威：习近平授军衔为何没有笑容？</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631030.md#1">【新闻看点】民主党背水战 国防部暂停拜登过渡</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630669.md#1">【役情最前线】中共是真正威胁 美国务院连发十推文</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/16/n12625486.md#1">【时事军事】钓鱼岛冲突再起 日本暗示或开打</a><br>
@@ -114,10 +114,10 @@
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/11/19/n12562094.md#1">【内幕】法院案例泄中国P2P背后隐秘</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/10/9/n12463902.md#1">【内幕】中共隐瞒文昌航天发射场突发事件</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/11/25/n12573486.md#1">【内幕】违反选举规律 拜登5种怪异赢法</a><br>
-<br><p align="center"><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/10/n12609446.md#1">【命理】明朝大才子杨慎 官运为何坎坷？</a><br>
+<br><p align="center"><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12626693.md#1">冬至“开运”民俗有哪些？</a><br>
+<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/10/n12609446.md#1">【命理】明朝大才子杨慎 官运为何坎坷？</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/16/5/16/n7899449.md#1">强国利民 孙威父子善为铠甲</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/10/3/n12449869.md#1">《圣经》与《推背图》预言的应验与变换10</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/1/n12587271.md#1">人长猪蹄 猪长人手 见证人畜间轮回转生</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/11/7/n12532515.md#1">【敦煌寻梦】西方信仰与中原艺术的交融</a><br>
-<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/15/n12623162.md#1">“幼科冠绝一代”的北宋名医钱乙</a><br>
 <br><p align="center"><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/vsrhmu3414/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vsrhmu3414/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/vsrhmu3414/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
